Second half of the setup that I've now added to the scaffolding.

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,7 @@
 DEV_MODE=1
 
-GRAPHQL_URL=http://api-REPONAME.test
-BACKEND_URL=http://api-REPONAME.test
+GRAPHQL_URL=http://api-joshrta.test
+BACKEND_URL=http://api-joshrta.test
 GRAPHQL_TOKEN=CRAFT_GRAPHQL_TOKEN
 CLOUDFRONT_URL=
 CLOUDFRONT_ID=
