--- a/backend/config/project/project.yaml
+++ b/backend/config/project/project.yaml
@@ -1,166 +1,28 @@
-dateModified: 1596458947
+dateModified: 1624295267
 email:
-  fromEmail: spenser@pennebaker.com
-  fromName: Nuxt
-  replyToEmail: null
-  template: ''
-  transportSettings:
-    encryptionMethod: tls
-    host: $SMTP_HOST
-    password: $SMTP_PASS
-    port: $SMTP_PORT
-    timeout: '10'
-    useAuthentication: '1'
-    username: $SMTP_USER
-  transportType: craft\mail\transportadapters\Smtp
+  fromEmail: taymuffins+joshrta@gmail.com
+  fromName: 'Api Joshrta'
+  transportType: craft\mail\transportadapters\Sendmail
 plugins:
-  architect:
+  navigation:
     edition: standard
     enabled: true
-    schemaVersion: 2.0.0
-  aws-s3:
-    edition: standard
-    enabled: true
-    schemaVersion: '1.2'
-  freeform:
-    edition: pro
-    enabled: true
-    schemaVersion: 3.0.7
-    settings:
-      ajaxByDefault: false
-      autoScrollToErrors: true
-      blockedEmails: ''
-      blockedEmailsError: 'Invalid Email Address'
-      blockedIpAddresses: ''
-      blockedKeywords: ''
-      blockedKeywordsError: 'Invalid Entry Data'
-      customErrorMessage: ''
-      customHoneypotName: ''
-      defaultTemplates: true
-      defaultView: dashboard
-      emailTemplateDirectory: null
-      emailTemplateStorage: db
-      fieldDisplayOrder: name
-      fillWithGet: false
-      footerScripts: false
-      formSubmitDisable: false
-      formSubmitExpiration: ''
-      formTemplateDirectory: null
-      formattingTemplate: flexbox.html
-      freeformHoneypot: ''
-      freeformHoneypotEnhancement: ''
-      hideBannerDemo: true
-      hideBannerOldFreeform: false
-      minimumSubmitTime: ''
-      pluginName: null
-      purgableSpamAgeInDays: '0'
-      purgableSubmissionAgeInDays: null
-      recaptchaBehaviour: display_error
-      recaptchaEnabled: false
-      recaptchaKey: null
-      recaptchaMinScore: 0.5
-      recaptchaSecret: null
-      recaptchaType: v2_checkbox
-      removeNewlines: false
-      renderFormHtmlInCpViews: true
-      salesforce_client_id: null
-      salesforce_client_secret: null
-      salesforce_password: null
-      salesforce_username: null
-      scriptInsertLocation: footer
-      sessionEntryMaxCount: 50
-      sessionEntryTTL: 10800
-      showErrorsForBlockedEmails: ''
-      showErrorsForBlockedKeywords: ''
-      showTutorial: false
-      spamFolderEnabled: '1'
-      spamProtectionBehaviour: simulate_success
-      submissionThrottlingCount: ''
-      submissionThrottlingTimeFrame: m
-  image-optimize:
-    edition: standard
-    enabled: true
-    schemaVersion: 1.0.0
-    settings:
-      allowUpScaledImageVariants: false
-      assetVolumeSubFolders: true
-      autoSharpenScaledImages: true
-      createColorPalette: true
-      createPlaceholderSilhouettes: true
-      imageTransformTypeSettings:
-        __assoc__:
-          -
-            - nystudio107\imageoptimizeimgix\imagetransforms\ImgixImageTransform
-            -
-              __assoc__:
-                -
-                  - domain
-                  - ''
-                -
-                  - apiKey
-                  - ''
-                -
-                  - securityToken
-                  - ''
-          -
-            - nystudio107\imageoptimizesharp\imagetransforms\SharpImageTransform
-            -
-              __assoc__:
-                -
-                  - baseUrl
-                  - $SHARP_DISTRIBUTION_ID
-          -
-            - nystudio107\imageoptimizethumbor\imagetransforms\ThumborImageTransform
-            -
-              __assoc__:
-                -
-                  - baseUrl
-                  - ''
-                -
-                  - securityKey
-                  - ''
-                -
-                  - includeBucketPrefix
-                  - ''
-      lowerQualityRetinaImageVariants: true
-      transformClass: nystudio107\imageoptimizesharp\imagetransforms\SharpImageTransform
-  neo:
-    edition: standard
-    enabled: true
-    schemaVersion: 2.3.0
-  redactor:
-    edition: standard
-    enabled: true
-    schemaVersion: 2.3.0
-  redactor-custom-styles:
-    edition: standard
-    enabled: true
-    schemaVersion: 1.0.0
-  rich-variables:
-    edition: standard
-    enabled: true
-    schemaVersion: 1.0.0
+    licenseKey: RP8QDX14UUA7TSW2AWPTRSW0
+    schemaVersion: 1.0.21
   seomatic:
     edition: standard
     enabled: true
-    schemaVersion: 3.0.9
-  similar:
-    edition: standard
-    enabled: true
-    schemaVersion: 1.0.0
-  webperf:
-    edition: standard
-    enabled: true
-    schemaVersion: 1.0.1
+    licenseKey: 3JZJXMTJY47HWFSLP7PG213A
+    schemaVersion: 3.0.10
 system:
   edition: pro
   live: true
-  name: $SYSTEM_NAME
-  schemaVersion: 3.5.12
+  name: 'Api Joshrta'
+  schemaVersion: 3.6.8
   timeZone: America/Los_Angeles
 users:
   allowPublicRegistration: false
   defaultGroup: null
-  photoSubpath: ''
+  photoSubpath: null
   photoVolumeUid: null
   requireEmailVerification: true
