project setup files hopefully maybe

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,13 +1,13 @@
 # The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
 ENVIRONMENT=dev
 
-SYSTEM_NAME=REPONAME
+SYSTEM_NAME=joshrta
 
 # The secure key Craft will use for hashing and encrypting data
 SECURITY_KEY=
 
 # The Data Source Name (“DSN”) that tells Craft how to connect to the database
-DB_DSN=mysql:host=127.0.0.1;port=3306;dbname=REPONAME_db_test;
+DB_DSN=mysql:host=127.0.0.1;port=3306;dbname=joshrta_db_test;
 
 # The database username to connect with
 DB_USER=root
@@ -21,7 +21,7 @@ DB_SCHEMA=public
 # The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
 DB_TABLE_PREFIX=
 
-BACKEND_SITE_URL=https://api-REPONAME.test
+BACKEND_SITE_URL=https://api-joshrta.test
 FRONTEND_SITE_URL=http://localhost:3000
 
 SMTP_HOST=smtp.mailtrap.io
