--- a/backend/composer.json
+++ b/backend/composer.json
@@ -48,7 +48,11 @@
   },
   "config": {
     "sort-packages": true,
-    "optimize-autoloader": true
+    "optimize-autoloader": true,
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true,
+      "craftcms/plugin-installer": true
+    }
   },
   "scripts": {
     "post-root-package-install": [
